# sqlite3ext_file

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  fopen_utf8.c  fopen_utf8.h  libsqlitefile_common.c  libsqlitefile_common.h  libsqlitefile_compat_mkdir.h  libsqlitefile_crc32.c  libsqlitefile_crc32.h  libsqlitefile_exists.c  libsqlitefile_exists.h  libsqlitefile_file_to_file.c  libsqlitefile_file_to_file.h  libsqlitefile_last_modification_date.c  libsqlitefile_last_modification_date.h  libsqlitefile_mkdir.c  libsqlitefile_mkdir.h  libsqlitefile_pathname.c  libsqlitefile_pathname.h  libsqlitefile_size.c  libsqlitefile_size.h  sqlite3ext_file.c
test/: test001-sqlite3.sh  test002-basic.sh  test002-basic.sql  test003-write.sh  test003-write.sql  test004-bigfile.sh  test004-bigfile.sql
