lib_LTLIBRARIES = sqlite3ext_file.la

sqlite3ext_file_la_SOURCES = \
sqlite3ext_file.c \
libsqlitefile_size.c \
libsqlitefile_mkdir.c \
libsqlitefile_file_to_file.c \
libsqlitefile_last_modification_date.c \
libsqlitefile_crc32.c \
libsqlitefile_exists.c \
libsqlitefile_pathname.c \
libsqlitefile_common.c \
fopen_utf8.c

sqlite3ext_file_la_LDFLAGS = -module -no-undefined -version-info 1:0
