lib_LTLIBRARIES = sqlite3ext_file.la

sqlite3ext_file_la_SOURCES = \
	sqlite3ext_file.c \
	libsqlitefile_size.c libsqlitefile_size.h \
	libsqlitefile_mkdir.c libsqlitefile_mkdir.h \
	libsqlitefile_file_to_file.c libsqlitefile_file_to_file.h \
	libsqlitefile_last_modification_date.c libsqlitefile_last_modification_date.h \
	libsqlitefile_crc32.c libsqlitefile_crc32.h    \
	libsqlitefile_exists.c libsqlitefile_exists.h   \
	libsqlitefile_pathname.c libsqlitefile_pathname.h \
	libsqlitefile_common.c libsqlitefile_common.h   \
	fopen_utf8.c fopen_utf8.h \
	libsqlitefile_compat_mkdir.h

sqlite3ext_file_la_LDFLAGS = -module -no-undefined -version-info 1:0
